# G14DIS

./: .gitignore  Blakey FEM.sublime-project  Blakey FEM.sublime-workspace  CMakeLists.txt  Makefile  README.md  parameters.f90  quadrature.f90
src/: common.cpp  common.hpp  driver.cpp  driver_plotter.py  element.cpp  element.hpp  fem.cpp  finiteDifference.f90  linearSystems.cpp  linearSystems.f90  linearSystems.hpp  matrix.cpp  matrix.hpp  matrix_full.cpp  matrix_full.hpp  matrix_sparse.cpp  matrix_sparse.hpp  mesh.cpp  mesh.f90  mesh.hpp  meshRefinement.cpp  meshRefinement.hpp  meshes.f90  nonlinearSystems.cpp  nonlinearSystems.hpp  parameters.f90  parameters.mod  plot_convergence.py  plot_mesh.py  plot_solution.py  quadrature.cpp  quadrature.f90  quadrature.hpp  refinement.cpp  refinement.hpp  solution.cpp  solution.hpp  solution_linear.cpp  solution_linear.hpp  solution_nonlinear.cpp  (+10 more)
srcC++/: common.cpp  fem.cpp  interpolation.cpp  linearSystems.cpp  quadrature (conflicted copy 2019-11-15 151021).cpp  quadrature.cpp  test (conflicted copy 2019-11-14 181524).cpp  test.cpp  test1.cpp
srcOld/: common.cpp  common.hpp  element.cpp  element.hpp  fem.cpp  mesh.cpp  quadrature.hpp  solution.cpp  solution.hpp  test2.cpp
tests/: driver_linux.cpp  efficiency.cpp  efficiency_plotter.py  errorConvergence.cpp  h_boundary.cpp  h_shock.cpp  h_sin.cpp  h_spike.cpp  hg_boundary.cpp  hg_shock.cpp  hg_sin.cpp  hg_spike.cpp  hp_boundary.cpp  hp_bratu.cpp  hp_shock.cpp  hp_sin.cpp  hp_spike.cpp  p_boundary.cpp  p_shock.cpp  p_sin.cpp  p_spike.cpp  pg_shock.cpp  plotTest.cpp  solve.cpp  (+7 more)
(+14 files in other folders)
